--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "json-server": "^0.14.0",
     "react": "^16.4.1",
     "react-color": "^2.14.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
-    "react-ui-cards": "^1.4.0"
+    "react-ui-cards": "^1.4.0",
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0",
+    "spotify-web-api-js": "^0.24.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "db": "json-server --watch ./public/monsters.json --port 3004 --static ./public",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
