--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
     "redux-saga": "^0.16.0",
     "spotify-web-api-js": "^0.24.0"
   },
