--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "resolutions": {
+    "react-scripts/jest": "23.3.5"
   }
 }
